Sign up code page correction in mobile View

--- a/html_Files/Signup.html
+++ b/html_Files/Signup.html
@@ -76,16 +76,12 @@
                             <div class="Email">
                                 <label for="SignUp_email"></label>
                                 <div class="icon_input_wrapper">
-                                    <span class="iconify icon-size" data-icon="ant-design:mail-outlined" ></span>
+                                    <span class="iconify icon-size" data-icon="ant-design:mail-outlined"></span>
                                     <span class="visually-hidden">Mail</span>
                                     <input type="email" id="SignUp_email" name="SignUp_email" placeholder="Email"
                                         required>
                                 </div>
                             </div>
-
-
-                            
-                            
                             <div class="Phone_Number">
                                 <label for="SignUp_phoneNumber"></label>
                                 <div class="icon_input_wrapper">
@@ -98,7 +94,7 @@
                             <div class="Address">
                                 <label for="SignUp_address"></label>
                                 <div class="icon_input_wrapper">
-                                    <span class="iconify icon-size" data-icon="ph:address-book-light" ></span>
+                                    <span class="iconify icon-size" data-icon="ph:address-book-light"></span>
                                     <span class="visually-hidden">Address</span>
                                     <input type="text" id="SignUp_address" name="SignUp_address" placeholder="Address"
                                         required>
@@ -106,7 +102,8 @@
                             </div>
                             <div class="SignUp-buttons">
                                 <button type="submit" id="SignUpBtn">SIGN UP</button><br>
-                                <p class="mb-LoginLink">Already User? <a href="Login.html" class="SignUPLoginBtn"> Login</a></p>
+                                <p class="mb-LoginLink">Already User? <a href="Login.html" class="SignUPLoginBtn">
+                                        Login</a></p>
                             </div>
                             <div class="errorContainr">
                                 <p>**Password does not match</p>
@@ -117,76 +114,6 @@
             </div>
         </div>
     </div>
-    <!-- <main>
-        <div class="SignUp-parent">
-            <div class="SignUp-wrapper">
-                <header>
-                    <h1>Sign Up</h1>
-                </header>
-                <div>
-                    <form>
-                        <div class="First_Name">
-                            <label for="SignUp_fName"></label>
-                            <div class="icon_input_wrapper">
-                                <i class="fas fa-user"></i>
-                                <input type="text" id="SignUp_fName" name="SignUp_fName" placeholder="First Name"
-                                    required>
-                            </div>
-                        </div>
-                        <div class="Last_Name">
-                            <label for="SignUp_lName"></label>
-                            <div class="icon_input_wrapper">
-                                <i class="fas fa-user"></i>
-                                <input type="text" id="SignUp_lName" name="SignUp_lName" placeholder="Last Name"
-                                    required>
-                            </div>
-                        </div>
-                        <div class="Phone_Number">
-                            <label for="SignUp_phoneNumber"></label>
-                            <div class="icon_input_wrapper">
-                                <i class="fas fa-user"></i>
-                                <input type="text" id="SignUp_phoneNumber" name="SignUp_phoneNumber"
-                                    placeholder="Phone Number" required>
-                            </div>
-                        </div>
-                        <div class="Email">
-                            <label for="SignUp_email"></label>
-                            <div class="icon_input_wrapper">
-                                <i class="fas fa-user"></i>
-                                <input type="email" id="SignUp_email" name="SignUp_email" placeholder="Email" required>
-                            </div>
-                        </div>
-                        <div class="Password">
-                            <label for="SignUp_password"></label>
-                            <div class="icon_input_wrapper">
-                                <i class="fas fa-user"></i>
-                                <input type="password" id="SignUp_password" name="SignUp_password"
-                                    placeholder="Password" required>
-                            </div>
-                        </div>
-                        <div class="Confirm_Password">
-                            <label for="SignUp_cPassword"></label>
-                            <div class="icon_input_wrapper">
-                                <i class="fas fa-user"></i>
-                                <input type="text" id="SignUp_cPassword" name="SignUp_cPassword"
-                                    placeholder="Confirm Password" required>
-                            </div>
-                        </div>
-                        <div class="SignUp-buttons">
-                            <button type="submit" id="SignUpBtn">Sign Up</button><br>
-                            <span class="LoginLink">
-                                <p>Already user </p><a href="Login.html"> Login</a>
-                            </span>
-                        </div>
-                        <div class="errorContainr">
-                            <p>**Password does not match</p>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </main> -->
-    <footer></footer>
     <script src="../js/signup.js" defer></script>
     <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
 </body>
