changed index link icon

--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -148,7 +148,7 @@
       <div class="Search_field_Icon_Container">
         <input type="text" id="SearchInputField" placeholder="Search">
       </div>
-      <p><i class="fas fa-link"></i></p>
+      <span class="iconify link-icon" data-icon="bi:link" style="font-size: 30px;"></span>
       <select name="categories" id="categories">
         <option value="personal-care-services">Personal Care Services</option>
         <option value="indoor-services">Indoor Services</option>
