Changes done in specific listing page Corrected UI

--- a/html_Files/SpecificListing.html
+++ b/html_Files/SpecificListing.html
@@ -124,12 +124,17 @@
                         <img id="Listing_Image" src="../img/pexels-artem-podrez-4783330.jpg" alt="Blowdrying Session">
                     </div>
                     <div class="specific-contact-info">
-                        <h2>Contact Information</h2>
-                        <p id="Listing_Owner"><strong>Name: </strong>Jack Smith</p>
-                        <p id="Listing_OwnerEmail"><strong>Email: </strong>jacksmith@gmail.com</p>
-                        <p id="Listing_OwnerNumber"><strong>Contact Number: </strong>+1 604-112-2211</p>
-                        <p id="Listing_OwnerCondition"><strong>Condition</strong>(if applicable): Use Loreal products
-                            only</p>
+                        <div class="specific-contact-title-wrapper">
+                            <h2>Contact Information</h2>
+                        </div>
+                        <div>
+                            <p id="Listing_Owner"><strong>Name: </strong>Jack Smith</p>
+                            <p id="Listing_OwnerEmail"><strong>Email: </strong>jacksmith@gmail.com</p>
+                            <p id="Listing_OwnerNumber"><strong>Contact Number: </strong>+1 604-112-2211</p>
+                            <p id="Listing_OwnerCondition"><strong>Condition</strong>(if applicable): Use Loreal
+                                products
+                                only</p>
+                        </div>
                     </div>
                 </div>
                 <div class="specific-desc">
