added the User name on desktop view

--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -88,6 +88,10 @@
             <div class="subProfileMenu">
               <ul>
                 <li>
+                  <p class="dk-WelcomeUser">Hello, <span id="user_Name"></span></p>
+                </li>
+
+                <li>
                   <a href="UpdateProfile.html">Profile</a>
                 </li>
                 <li>
@@ -106,24 +110,29 @@
     <ul>
       <!-- Add Links to the Pages when created -->
       <li>
-        <a href="index.html"><span class="iconify" data-icon="ant-design:home-outlined" style="font-size: 20px;"></span> Home</a>
+        <a href="index.html"><span class="iconify" data-icon="ant-design:home-outlined" style="font-size: 20px;"></span>
+          Home</a>
       </li>
       <li>
-        <a href="CreateListing.html"><span class="iconify" data-icon="fluent:text-bullet-list-add-20-regular" style="font-size: 20px;"></span>Create</a>
+        <a href="CreateListing.html"><span class="iconify" data-icon="fluent:text-bullet-list-add-20-regular"
+            style="font-size: 20px;"></span>Create</a>
       </li>
       <li>
-        <a class="ViewListing"> <span class="iconify" data-icon="carbon:data-view" style="font-size: 20px;"></span>View Listing</a>
+        <a class="ViewListing"> <span class="iconify" data-icon="carbon:data-view" style="font-size: 20px;"></span>View
+          Listing</a>
       </li>
       <li>
-        <a href="AboutUs.html">    <span class="iconify" data-icon="clarity:users-line" style="font-size: 20px;"></span></span>About Us</a>
+        <a href="AboutUs.html"> <span class="iconify" data-icon="clarity:users-line"
+            style="font-size: 20px;"></span></span>About Us</a>
       </li>
       <li>
         <a href="UpdateProfile.html">
           <span class="iconify" data-icon="carbon:user-profile" style="font-size: 20px;"></span>
-       Profile</a>
+          Profile</a>
       </li>
       <li>
-        <a href="Login.html"><strong><span class="iconify" data-icon="ri:logout-circle-line" style="font-size: 20px;"></span> Logout?</strong></a>
+        <a href="Login.html"><strong><span class="iconify" data-icon="ri:logout-circle-line"
+              style="font-size: 20px;"></span> Logout?</strong></a>
       </li>
     </ul>
   </nav>
