About us page content updated

--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -128,14 +128,7 @@
                 <div class="about-vision">
                     <h2>Our Vision</h2>
                     <div class="about-content2">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia amet optio commodi earum
-                            consequatur velit eum atque, hic repellat. Autem quo natus itaque doloribus qui, facere
-                            deserunt numquam neque assumenda?Lorem, ipsum dolor sit amet consectetur adipisicing
-                            elit. Molestias sit enim ex nulla laborum, fugiat laudantium consequuntur veritatis
-                            blanditiis. Debitis reprehenderit ducimus eius tempore voluptatibus, sed a voluptas
-                            corrupti sequi.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-                            nihil eius ut, omnis excepturi quisquam tenetur dicta perspiciatis similique dolore illo
-                            magnam tempore soluta consequuntur, ratione nulla nisi officiis. Sunt.</p>
+                        <p>Our vision is to esclate the  home services business and to make a difference by providing low cost professional services at ones doorstep. We are focused towards providing direct services from vendor to customer without any third party charges. Our aim is to Save Time and Efforts by providing bidding facility to people to get the great offers even for the small scale service.</p>
                     </div>
                 </div>
                 <div class="about-choose">
@@ -143,22 +136,22 @@
                     <div class="about-choose-item1">
                         <!-- <span><i class="fa-solid fa-star"></i></span> -->
                         <span class="iconify" data-icon="akar-icons:star"></span>
-                        <p>Low Cost Professional Service</p>
+                        <p>List any service and get notified.</p>
                     </div>
                     <div class="about-choose-item2">
                         <!-- <span><i class="fa-solid fa-gear"></i></span> -->
                         <span class="iconify" data-icon="bytesize:settings"></span>
-                        <p>Get Great Deals</p>
+                        <p>Accept/ Decline offers just at one click.</p>
                     </div>
                     <div class="about-choose-item3">
                         <!-- <span><i class="fa-solid fa-earth-europe"></i></span> -->
                         <span class="iconify" data-icon="clarity:network-globe-outline-badged"></span>
-                        <p>Save Time and Efforts</p>
+                        <p>Make connection and get recognized.</p>
                     </div>
                     <div class="about-choose-item4">
                         <!-- <span><i class="fa-solid fa-location-dot"></i></span> -->
                         <span class="iconify" data-icon="bytesize:location"></span>
-                        <p>Get Recognized</p>
+                        <p>Access to real time location of the owner and the bidder.</p>
                     </div>
                 </div>
             </div>
