--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -13,7 +13,7 @@
 
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
-  <link rel="icon" type="image/x-icon" href="../icon/Home_Genie_DK_Logo.ico">
+  <link rel="icon" type="image/x-icon" href="../img/Home_Genie.ico">
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/styles.css">
