corrected confirm password

--- a/html_Files/Signup.html
+++ b/html_Files/Signup.html
@@ -69,7 +69,7 @@
                                     <!-- <i class="fas fa-user"></i> -->
                                     <span class="iconify icon-size" data-icon="charm:circle-tick"></span>
                                     <span class="visually-hidden">Confirm </span>
-                                    <input type="text" id="SignUp_cPassword" name="SignUp_cPassword"
+                                    <input type="password" id="SignUp_cPassword" name="SignUp_cPassword"
                                         placeholder="Confirm Password" required>
                                 </div>
                             </div>
