--- a/html_Files/Signup.html
+++ b/html_Files/Signup.html
@@ -41,11 +41,11 @@
                                 <div class="icon_input_wrapper">
                                     <span class="iconify icon-size" data-icon="ant-design:user-outlined"></span>
                                     <span class="visually-hidden">UserName</span>
-                                    <input type="text" id="SignUp_fName" name="SignUp_fName" placeholder="UserName"
+                                    <input type="text" id="SignUp_fName" name="SignUp_fName" placeholder="First Name"
                                         required>
                                 </div>
                             </div>
-                            <!-- <div class="Last_Name">
+                            <div class="Last_Name">
                                 <label for="SignUp_lName"></label>
                                 <div class="icon_input_wrapper">
                                     <span class="iconify icon-size" data-icon="ant-design:user-outlined"></span>
@@ -53,7 +53,7 @@
                                     <input type="text" id="SignUp_lName" name="SignUp_lName" placeholder="Last Name"
                                         required>
                                 </div>
-                            </div> -->
+                            </div>
                             <div class="Password">
                                 <label for="SignUp_password"></label>
                                 <div class="icon_input_wrapper">
