corrected bug of showing user name

--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -88,7 +88,7 @@
             <div class="subProfileMenu">
               <ul>
                 <li>
-                  <p class="dk-WelcomeUser">Hello, <span id="user_Name"></span></p>
+                  <p class="dk-WelcomeUser">Hello, <span id="dk_user_Name"></span></p>
                 </li>
 
                 <li>
@@ -148,7 +148,7 @@
 
   <main>
     <div class="mb-UserGreetingContainer">
-      <h1>Welcome, <span id="user_Name"></span></h1>
+      <h1>Welcome, <span id="mb_user_Name"></span></h1>
     </div>
     <div class="heroImageContainer">
       <img class="hero_Image" src="../img/HERO IMAGE-02.png" alt="Hero_Image">
