Notification style and code added proper coding yet to be done

--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -139,11 +139,31 @@
 
   <div class="Notification_wrapper">
     <div class="NotificationPopUpContainer">
+      <div class="text_btn_wrapper">
+        <h3>Notifications </h3>
+        <a id="CrossIcon">
+          x
+        </a>
+      </div>
       <div class="NotificationPopUp">
+        <div class="ownerNotification">
+          <h3 class="listingTitle">Title</h1>
+            <p>You have received a new offer by <span id="custonerName">Temp</span></p>
+            <div class="viewbtnWrapper">
+            <a class="viewlisting">View Listing</a>
+            </div>  
+        </div>
+
+        <div class="customerNotification">
+          <h3 class="listingTitle">Title</h1>
+            <p>Horray!! <span id="ownerName">Temp</span> accepted your offer</p>
+            <a class="viewlisting">View Listing</a>
+        </div>
       </div>
       <div class="triangle"></div>
     </div>
   </div>
+
   <!-- Till here -->
 
   <main>
