Added the notification Coding Work. Now I need some rest. Remaining is the setting the status

--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -58,7 +58,7 @@
     </div>
     <div class="Menu_BellIconContainer">
       <a href="#" id="ShowNotificationPopUp">
-        <img src="../img/Notification_Genie.png" alt="Notification Genie">
+        <img id="mb_NotificationGenie" src="../img/Notification_Genie.png" alt="Notification Genie">
       </a>
       <a href="#" id="ShowMenu">
         <i title="Show Menu" class="fas fa-bars"></i>
@@ -68,7 +68,7 @@
       <ul>
         <li>
           <a href="#" id="dk-ShowNotificationPopUp">
-            <img src="../img/Notification_Genie.png" alt="Notification Genie">
+            <img id="dk_NotificationGenie" src="../img/Notification_Genie.png" alt="Notification Genie">
           </a>
         </li>
         <li>
@@ -146,19 +146,21 @@
         </a>
       </div>
       <div class="NotificationPopUp">
-        <div class="ownerNotification">
+        <!-- <div class="ownerNotification">
           <h3 class="listingTitle">Title</h1>
             <p>You have received a new offer by <span id="custonerName">Temp</span></p>
             <div class="viewbtnWrapper">
-            <a class="viewlisting">View Listing</a>
-            </div>  
+              <a class="viewlisting">View Listing</a>
+            </div>
         </div>
 
         <div class="customerNotification">
           <h3 class="listingTitle">Title</h1>
             <p>Horray!! <span id="ownerName">Temp</span> accepted your offer</p>
-            <a class="viewlisting">View Listing</a>
-        </div>
+            <div class="viewbtnWrapper">
+              <a class="viewlisting">View Listing</a>
+            </div>
+        </div> -->
       </div>
       <div class="triangle"></div>
     </div>
