Added the genie logo with Id to every page

--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -29,7 +29,7 @@
         </div>
         <div class="Menu_BellIconContainer">
             <a href="#" id="ShowNotificationPopUp">
-                <img src="../img/Notification_Genie.png" alt="Notification Genie">
+                <img id="mb_NotificationGenie" src="../img/Notification_Genie.png" alt="Notification Genie">
             </a>
             <a href="#" id="ShowMenu">
                 <i title="Show Menu" class="fas fa-bars"></i>
@@ -39,7 +39,7 @@
             <ul>
                 <li>
                     <a href="#" id="dk-ShowNotificationPopUp">
-                        <img src="../img/Notification_Genie.png" alt="Notification Genie">
+                        <img id="dk_NotificationGenie" src="../img/Notification_Genie.png" alt="Notification Genie">
                     </a>
                 </li>
                 <li>
@@ -128,7 +128,11 @@
                 <div class="about-vision">
                     <h2>Our Vision</h2>
                     <div class="about-content2">
-                        <p>Our vision is to esclate the  home services business and to make a difference by providing low cost professional services at ones doorstep. We are focused towards providing direct services from vendor to customer without any third party charges. Our aim is to Save Time and Efforts by providing bidding facility to people to get the great offers even for the small scale service.</p>
+                        <p>Our vision is to esclate the home services business and to make a difference by providing low
+                            cost professional services at ones doorstep. We are focused towards providing direct
+                            services from vendor to customer without any third party charges. Our aim is to Save Time
+                            and Efforts by providing bidding facility to people to get the great offers even for the
+                            small scale service.</p>
                     </div>
                 </div>
                 <div class="about-choose">
