--- a/html_Files/SpecificListing.html
+++ b/html_Files/SpecificListing.html
@@ -28,7 +28,7 @@
         </div>
         <div class="Menu_BellIconContainer">
             <a href="#" id="ShowNotificationPopUp">
-                <img src="../img/Notification_Genie.png" alt="Notification Genie">
+                <img id="mb_NotificationGenie" src="../img/Notification_Genie.png" alt="Notification Genie">
             </a>
             <a href="#" id="ShowMenu">
                 <i title="Show Menu" class="fas fa-bars"></i>
@@ -38,7 +38,7 @@
             <ul>
                 <li>
                     <a href="#" id="dk-ShowNotificationPopUp">
-                        <img src="../img/Notification_Genie.png" alt="Notification Genie">
+                        <img id="dk_NotificationGenie" src="../img/Notification_Genie.png" alt="Notification Genie">
                     </a>
                 </li>
                 <li>
