Corrected the icon for the cross in notification

--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -142,7 +142,7 @@
       <div class="text_btn_wrapper">
         <h3>Notifications </h3>
         <a id="CrossIcon">
-          x
+          <i class="far fa-times-circle"></i>
         </a>
       </div>
       <div class="NotificationPopUp">
