--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -166,6 +166,18 @@
     </div>
   </div>
 
+
+  <div class="messageboxWrapper">
+    <div class="crossIconContainer">
+      <a id="CloseMsgBox">
+        <i class="far fa-times-circle"></i>
+      </a>
+    </div>
+    <div class="msgContainer">
+      <p id="yourMsg">Some Message</p>
+    </div>
+  </div>
+
   <!-- Till here -->
 
   <main>
