Added notification to create listing page

--- a/html_Files/CreateListing.html
+++ b/html_Files/CreateListing.html
@@ -94,21 +94,35 @@
                 </li>
             </ul>
         </nav>
-
         <div class="Notification_wrapper">
             <div class="NotificationPopUpContainer">
+                <div class="text_btn_wrapper">
+                    <h3>Notifications </h3>
+                    <a id="CrossIcon">
+                        <i class="far fa-times-circle"></i>
+                    </a>
+                </div>
                 <div class="NotificationPopUp">
-                    <div class="Notification_id1">
-                        <h3>Listing Name</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
-                        <div>
-                            <button>View Listing</button>
-                        </div>
+                    <!-- <div class="ownerNotification">
+                  <h3 class="listingTitle">Title</h1>
+                    <p>You have received a new offer by <span id="custonerName">Temp</span></p>
+                    <div class="viewbtnWrapper">
+                      <a class="viewlisting">View Listing</a>
                     </div>
+                </div>
+        
+                <div class="customerNotification">
+                  <h3 class="listingTitle">Title</h1>
+                    <p>Horray!! <span id="ownerName">Temp</span> accepted your offer</p>
+                    <div class="viewbtnWrapper">
+                      <a class="viewlisting">View Listing</a>
+                    </div>
+                </div> -->
                 </div>
                 <div class="triangle"></div>
             </div>
         </div>
+
         <!-- Till here -->
         <main class="ListingSite-main">
             <form class="create-user-form">
@@ -252,8 +266,8 @@
             </div>
         </footer>
     </div>
-    <script src="../js/script.js"></script>
-    <script src="../js/createListing.js"></script>
+    <script type="text/javascript" src="../js/script.js"></script>
+    <script type="text/javascript" src="../js/createListing.js"></script>
 </body>
 
 </html>
