--- a/html_Files/SpecificListing.html
+++ b/html_Files/SpecificListing.html
@@ -57,10 +57,10 @@
                     <div class="subProfileMenu">
                         <ul>
                             <li>
-                                <a href="UpdateProfile.html">Update Profile</a>
+                                <a href="UpdateProfile.html">Profile</a>
                             </li>
                             <li>
-                                <a href="Login.html">Logout</a>
+                                <a id="logoutBtn">Logout</a>
                             </li>
                         </ul>
                     </div>
@@ -95,16 +95,16 @@
         </ul>
     </nav>
 
+
     <div class="Notification_wrapper">
         <div class="NotificationPopUpContainer">
+            <div class="text_btn_wrapper">
+                <h3>Notifications </h3>
+                <a id="CrossIcon">
+                    <i class="far fa-times-circle"></i>
+                </a>
+            </div>
             <div class="NotificationPopUp">
-                <div class="Notification_id1">
-                    <h3>Listing Name</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
-                    <div>
-                        <button>View Listing</button>
-                    </div>
-                </div>
             </div>
             <div class="triangle"></div>
         </div>
@@ -199,8 +199,8 @@
             </div>
         </div>
     </footer>
-    <script src="../js/script.js" defer></script>
-    <script src="../js/specificListing.js" defer></script>
+    <script type="text/javascript" src="../js/script.js" defer></script>
+    <script type="text/javascript" src="../js/specificListing.js" defer></script>
 </body>
 
 </html>
