Changes done for notification in the search page

--- a/html_Files/CreateListing.html
+++ b/html_Files/CreateListing.html
@@ -57,10 +57,10 @@
                         <div class="subProfileMenu">
                             <ul>
                                 <li>
-                                    <a href="UpdateProfile.html">Update Profile</a>
+                                    <a href="UpdateProfile.html">Profile</a>
                                 </li>
                                 <li>
-                                    <a href="Login.html">Logout</a>
+                                    <a id="logoutBtn">Logout</a>
                                 </li>
                             </ul>
                         </div>
