--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -9,7 +9,7 @@
 
     <meta name="description" content="A Bidding platform for the people to bid on the home services of other people">
     <link rel="manifest" href="../app.webmanifest">
-    
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css"
         integrity="sha512-3PN6gfRNZEX4YFyz+sIyTF6pGlQiryJu9NlGhu9LrLMQ7eDjNgudQoFDK3WSNAayeIKc6B8WXXpo4a7HqxjKwg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -40,11 +40,6 @@
         <div class="dk-menu">
             <ul>
                 <li>
-                    <a href="#" id="dk-ShowNotificationPopUp">
-                        <img id="dk_NotificationGenie" src="../img/Notification_Genie.png" alt="Notification Genie">
-                    </a>
-                </li>
-                <li>
                     <a href="CreateListing.html">Create</a>
                 </li>
                 <li>
@@ -54,18 +49,29 @@
                     <a href="AboutUs.html">About Us</a>
                 </li>
                 <li>
+                    <a href="#" id="dk-ShowNotificationPopUp">
+                        <img id="dk_NotificationGenie" src="../img/Notification_Genie.png" alt="Notification Genie">
+                    </a>
+                </li>
+                <li>
                     <a href="#" class="ProfileIcon">
                         <i title="Profile" class="far fa-user-circle"></i>
                     </a>
-                    <div class="subProfileMenu">
-                        <ul>
-                            <li>
-                                <a href="UpdateProfile.html">Profile</a>
-                            </li>
-                            <li>
-                                <a id="logoutBtn">Logout</a>
-                            </li>
-                        </ul>
+                    <div id="ProfileContainer">
+                        <div class="subProfileMenu">
+                            <ul>
+                                <li>
+                                    <p class="dk-WelcomeUser">Hello, <span class="loggedUserName"></span></p>
+                                </li>
+
+                                <li>
+                                    <a href="UpdateProfile.html">Profile</a>
+                                </li>
+                                <li>
+                                    <a id="logoutBtn">Logout</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </li>
             </ul>
