--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -67,11 +67,6 @@
     <div class="dk-menu">
       <ul>
         <li>
-          <a href="#" id="dk-ShowNotificationPopUp">
-            <img id="dk_NotificationGenie" src="../img/Notification_Genie.png" alt="Notification Genie">
-          </a>
-        </li>
-        <li>
           <a href="CreateListing.html">Create</a>
         </li>
         <li>
@@ -81,6 +76,11 @@
           <a href="AboutUs.html">About Us</a>
         </li>
         <li>
+          <a href="#" id="dk-ShowNotificationPopUp">
+            <img id="dk_NotificationGenie" src="../img/Notification_Genie.png" alt="Notification Genie">
+          </a>
+        </li>
+        <li>
           <a href="#" class="ProfileIcon">
             <i title="Profile" class="far fa-user-circle"></i>
           </a>
@@ -88,7 +88,7 @@
             <div class="subProfileMenu">
               <ul>
                 <li>
-                  <p class="dk-WelcomeUser">Hello, <span id="dk_user_Name"></span></p>
+                  <p class="dk-WelcomeUser">Hello, <span class="loggedUserName"></span></p>
                 </li>
 
                 <li>
@@ -182,7 +182,7 @@
 
   <main>
     <div class="mb-UserGreetingContainer">
-      <h1>Welcome, <span id="mb_user_Name"></span></h1>
+      <h1>Welcome, <span class="loggedUserName"></span></h1>
     </div>
     <div class="heroImageContainer">
       <img class="hero_Image" src="../img/HERO IMAGE-02.png" alt="Hero_Image">
